# trading_competition

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  REPOSPEC.md  competition_modification_plan.md  competition_whitelist_core_satellite.txt  main.py  pyproject.toml  setup.sh  start.sh
artifacts/: icir_priors.json
config/: default.yaml  model.onnx  model.onnx.data  model.pt
core/: models.py
data/: buffer.py  connector.py  resampler.py  roostoo_auth.py  sim_feed.py
docker/: Dockerfile
execution/: executor.py  order_manager.py  roostoo_executor.py  sim_executor.py  trade_logger.py
features/: extractor.py
models/: icir_tracker.py  inference.py  lstm_model.py  model_wrapper.py  train.py  transformer_model.py
risk/: risk_shield.py  tracker.py
scripts/: data_generation.sh  deploy_aws.sh  run.sh  start_competition.sh  sweep_models.sh  sweep_one.sh  sweep_parallel.sh  sweep_sequential.sh  upload.sh  upload_model_to_hf.py
strategy/: factor_engine.py  logic.py  monitor.py  trade_tracker.py
tests/: conftest.py  test_alpha_engine.py  test_buffer.py  test_connector.py  test_factor_engine.py  test_features.py  test_hardening.py  test_icir.py  test_integration.py  test_main.py  test_main_roostoo.py  test_models.py  test_multi_tf.py  test_order_manager.py  test_resampler.py  test_risk_shield.py  test_roostoo_executor.py  test_roostoo_live_smoke.py  test_signal_confirmation.py  test_sim_executor.py  test_sim_feed.py  test_strategy.py  test_tracker.py  test_trade_tracker.py  test_train.py
(+1 files in other folders)
